# rtk_factor_graph

./: .clang-format  .cmake-format.yml  .gitignore  .gitlab-ci.yml  .style.yapf  CMakeLists.txt  setup.cfg
client/: CMakeLists.txt
client/parsers/: CMakeLists.txt  bench_galileo.cxx  bench_glonass.cxx  bench_gps.cxx  bit_tools.h  eph.h  galileo.cxx  galileo.h  glonass.cxx  glonass.h  gps.cxx  gps.h  test_bit_tools.cxx  test_galileo.cxx  test_glonass.cxx  test_gps.cxx
cmake/: BenchRule.cmake  BuildGuard.cmake  CapnpRule.cmake  CleanRule.cmake  CompileFlags.cmake  EkfRule.cmake  ExecRule.cmake  External_AsyncComm.cmake  External_Benchmark.cmake  External_Ceres.cmake  External_Eigen3.cmake  External_Fmt.cmake  External_GFlags.cmake  External_GLog.cmake  External_GTest.cmake  External_Yaml.cmake  FetchContentHelper.cmake  GTestRule.cmake  LibRule.cmake  Options.cmake  PyRule.cmake  QuietMessage.cmake  StrictCompilation.cmake
common/: CMakeLists.txt  assert.h  check.cxx  check.h  circular_buffer.h  defs.h  error.h  error_result.h  has_plus.h  hetero_collection.h  logger.h  matrix_defs.h  numerical_jacobian.h  out.h  print.cxx  print.h  quantized_time.cxx  quantized_time.h  random.h  test_circular_buffer.cxx  test_error.cxx  test_error_result.cxx  test_helpers.h  test_hetero_collection.cxx  test_logger.cxx  test_numerical_jacobian.cxx  test_out.cxx  test_print.cxx  test_quantized_time.cxx  test_utctime.cxx  utctime.cxx  utctime.h
common/ephemeris/: CMakeLists.txt  bench_galileo.cxx  bench_glonass.cxx  bench_gps.cxx  bit_tools.h  eph.h  galileo.cxx  galileo.h  glonass.cxx  glonass.h  gps.cxx  gps.h  test_bit_tools.cxx  test_galileo.cxx  test_glonass.cxx  test_gps.cxx
common/geometry/: CMakeLists.txt  dquat.h  quat.h  se3.h  so3.h  test_dquat.cxx  test_quat.cxx  test_se3.cxx  test_so3.cxx  test_xform.cxx
common/logging/: CMakeLists.txt  header.cxx  header.h  log_format.cxx  log_format.h  log_format_test.cxx  log_key.h  log_reader.cxx  log_reader.h  log_reader.py  log_reader_test.cxx  log_writer.cxx  log_writer.h  log_writer_test.cxx  logger.cxx  logger.h  serialize.cxx  serialize.h  serialize_test.cxx  test_header.cxx  test_logger.cxx
common/math/: CMakeLists.txt  bench_dquat.cxx  bench_quat.cxx  bench_se3.cxx  bench_so3.cxx  dquat.h  jet.h  quat.cxx  quat.h  rk4.h  se3.h  so3.h  test_dquat.cxx  test_quat.cxx  test_se3.cxx  test_so3.cxx  two_jet.h
common/measurements/: gnss_observation.h  imu.h
common/satellite/: CMakeLists.txt  atm_correction.cxx  atm_correction.h  azel.cxx  azel.h  satellite.cxx  satellite.h  satellite_cache.cxx  satellite_cache.h  satellite_state.cxx  satellite_state.h  test_atm_correction.cxx  test_azel.cxx  test_satellite.cxx  test_satellite_state.cxx
config/: rtk_ekf_post_process.yaml
core/: CMakeLists.txt  estimator.cxx  estimator.h  factor_graph.cxx  factor_graph.h  imu_bias.h  node.h  sat_manager.cxx  sat_manager.h  test_estimator.cxx  test_factor_graph.cxx  test_sat_manager.cxx
core/ekf/: CMakeLists.txt  rtk_ekf.cxx  rtk_ekf.h  rtk_ekf.yaml  rtk_ekf_base.yaml  rtk_ekf_bench.cxx  rtk_ekf_estimator.cxx  rtk_ekf_estimator.h  rtk_ekf_estimator_test.cxx  rtk_ekf_impl.cxx  rtk_ekf_test.cxx  rtk_ekf_test.py
core/ekf/ekf_gen/: CMakeLists.txt  ekf_gen.py  ekf_gen_matrix_manip.py  ekf_gen_state.py  ekf_gen_templates.py  ekf_gen_test.py  ekf_gen_utils.py  example_ekf.yaml  example_ekf_test.cxx  symb_algebra.py  symb_block_matrix.py  symb_matrix.py  symb_matrix_test.py
core/factors/: CMakeLists.txt  base.h  factors.h  gnss.h  gnss_switch.h  imu.h  relative_carrier_phase.h  test_gnss_factor.cxx  test_imu_factor.cxx  test_rel_cp_factor.cxx  test_sw_factor.cxx
core/solver/: CMakeLists.txt  bench_lambda.cxx  lambda.cxx  lambda.h  solver.h  test_lambda.cxx  test_solver.cxx
core/states/: CMakeLists.txt  antenna_position.h  base.h  clock_bias.h  gnss_switch.h  imu_bias.h  pose.h  states.h  test_states.cxx  vel.h
docs/: mkdocs.yml
factors/: CMakeLists.txt  bench_imu_functor.cxx  bench_imu_integrator.cxx  bench_prange_functor.cxx  imu_functor.cxx  imu_functor.h  imu_integrator.cxx  imu_integrator.h  imu_state.cxx  imu_state.h  prange_functor.cxx  prange_functor.h  test_imu_functor.cxx  test_imu_integrator.cxx  test_imu_state.cxx  test_prange_functor.cxx
models/: CMakeLists.txt  bench_gnss_dynamics_model.cxx  bench_imu_integrator.cxx  bench_imu_model.cxx  bench_pose_error_model.cxx  bench_prange_model.cxx  bench_relative_carrier_phase_model.cxx  gnss_dynamics_model.cxx  gnss_dynamics_model.h  imu_integrator.cxx  imu_integrator.h  imu_model.cxx  imu_model.h  imu_state.cxx  imu_state.h  plot_imu_model_test.py  pose_error_model.cxx  pose_error_model.h  prange_model.cxx  prange_model.h  relative_carrier_phase_model.cxx  relative_carrier_phase_model.h  test_gnss_dynamics_model.cxx  test_imu_integrator.cxx  test_imu_model.cxx  test_imu_state.cxx  test_pose_error_model.cxx  test_prange_model.cxx  test_relative_carrier_phase_model.cxx
output/: imu.hdr  obs.hdr  truth.hdr
parsers/: CMakeLists.txt
plotting/: CMakeLists.txt  plot_keys.py  plot_obs.py  plot_window.py  standard_plot.py
scratch/: CMakeLists.txt  (+2 more)
scratch/third_party_install/: CMakeLists.txt  ceres_install.cxx  eigen_install.cxx  test_ceres_install.cxx  test_eigen_install.cxx  test_glog_install.cxx
sim/: CMakeLists.txt  plot_sim.py  sim.cxx  sim.h  simulate.cxx  test_sim.cxx
sim/config/: truth.yaml
sim/controllers/: CMakeLists.txt  pid.cxx  pid.h
sim/dynamics/: CMakeLists.txt  car.cxx  car.h  dynamics.cxx  dynamics.h  plot_test_car.py  test_car.cxx
sim/sensors/: CMakeLists.txt  gnss.cxx  gnss.h  imu.cxx  imu.h
tools/: CMakeLists.txt  gather_ephemeris.cxx  plot_gathered_eph.py  plot_post_process.py  post_process.cxx  verify_ephemeris.cxx
utils/: CMakeLists.txt  config.cxx  config.h  crc.cxx  crc.h  file.h  has_data.h  non_copyable.h  plot_window.py  plotting.py  progress_bar.cxx  progress_bar.h  serial_interface.h  split_string.cxx  split_string.h  strip_string.cxx  strip_string.h  test_config.cxx  test_utctime.cxx  test_wgs84.cxx  utctime.cxx  utctime.h  wgs84.cxx  wgs84.h
(+21 files in other folders)
