library(imu_state imu_state.cxx)
add_gtest(test_imu_state test_imu_state.cxx)
target_link_libraries(test_imu_state imu_state)

library(imu_integrator imu_integrator.cxx)
target_link_libraries(imu_integrator utctime imu_state check)
add_gtest(test_imu_integrator test_imu_integrator.cxx)
target_link_libraries(test_imu_integrator imu_integrator)
add_benchmark(bench_imu_integrator SRCS bench_imu_integrator.cxx DEPS imu_integrator)

library(imu_functor imu_functor.cxx)
target_link_libraries(imu_functor imu_integrator)
add_gtest(test_imu_functor test_imu_functor.cxx)
target_link_libraries(test_imu_functor imu_functor)
add_benchmark(bench_imu_functor SRCS bench_imu_functor.cxx DEPS imu_functor)

library(prange_functor prange_functor.cxx)
target_link_libraries(prange_functor atm_correction satellite check)
add_gtest(test_prange_functor test_prange_functor.cxx)
target_link_libraries(test_prange_functor prange_functor sdr_adapter gps)
add_benchmark(bench_prange_functor SRCS bench_prange_functor.cxx DEPS prange_functor gps)
